--- a/WebApp/css/grayscale.css
+++ b/WebApp/css/grayscale.css
@@ -403,6 +403,27 @@ img::selection {
 img::-moz-selection {
     background: 0 0;
 }
+select {
+   margin: 50px;
+    border: 1px solid #111;
+   background: transparent;
+   width: 150px;
+   padding: 5px 35px 5px 5px;
+   font-size: 16px;
+   border: 1px solid #ccc;
+   height: 34px;
+   -webkit-appearance: none;
+   -moz-appearance: none;
+   appearance: none;
+    background: url(http://www.stackoverflow.com/favicon.ico) 96% / 15% no-repeat #eee;
+} 
+/*target Internet Explorer 9 and Internet Explorer 10:*/
+@media screen and (min-width:0\0) { 
+    select {
+        background:none;
+        padding: 5px;
+    }
+}
 
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
